--- a/index.html
+++ b/index.html
@@ -42,12 +42,18 @@
     <section class="projectSection">
       <h2>What do you want to see?</h2>
       <div class="projSelection">
-        <div>
-          <a href="#">Coding</a>
-        </div>
-        <div>
-          <a href="#">Art</a>
-        </div>
+        
+          <a href="projectPage_Code.html">
+            <div>
+              Coding
+            </div>
+            </a>
+      
+          <a href="#">
+            <div>
+              Art
+            </div>
+            </a>
       </div>
     </section>
   </body>
