Updated links between HTML pages

--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Portfolio</title>
     <link href="style.css" rel="stylesheet" />
-    
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -20,7 +19,7 @@
       <a href="#" class="logo">AM</a>
       <ul>
         <li><a href="#">About</a></li>
-        <li><a href="#">Portfolio</a></li>
+        <li><a href="#projectSection">Portfolio</a></li>
         <li><a href="#">Contact</a></li>
       </ul>
     </header>
@@ -39,7 +38,7 @@
         </h3>
       </div>
     </section>
-    <section class="projectSection">
+    <section class="projectSection" id="projectSection">
       <h2>What do you want to see?</h2>
       <div class="projSelection">
         
