--- a/projectPage_Code.html
+++ b/projectPage_Code.html
@@ -5,8 +5,22 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ProjectPage - Code</title>
+    <link href="style.css" rel="stylesheet" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Fredoka+One&family=Open+Sans:wght@400;700&display=swap"
+      rel="stylesheet"
 </head>
 <body>
-    
+    <header>
+        <!-- may make this sticky later to make sure it fits on bigger or smaller screens-->
+        <a href="index.html" class="logo">AM</a>
+        <ul>
+          <li><a href="#">About</a></li>
+          <li><a href="index.html#projectSection">Portfolio</a></li>
+          <li><a href="#">Contact</a></li>
+        </ul>
+      </header>
 </body>
 </html>
