Created CSS Grid for project page
-Created the CSS grid for coding project page.

BUGS
- fix links on projectPage_Code.html, none of the links are clickable

--- a/projectPage_Code.html
+++ b/projectPage_Code.html
@@ -1,26 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ProjectPage - Code</title>
     <link href="style.css" rel="stylesheet" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Fredoka+One&family=Open+Sans:wght@400;700&display=swap"
-      rel="stylesheet"
-</head>
-<body>
+    href="https://fonts.googleapis.com/css2?family=Fredoka+One&family=Open+Sans:wght@400;700&display=swap"
+    rel="stylesheet"
+  </head>
+  <body style="background-color: black">
     <header>
-        <!-- may make this sticky later to make sure it fits on bigger or smaller screens-->
-        <a href="index.html" class="logo">AM</a>
-        <ul>
-          <li><a href="#">About</a></li>
-          <li><a href="index.html#projectSection">Portfolio</a></li>
-          <li><a href="#">Contact</a></li>
-        </ul>
-      </header>
-</body>
+      <!-- may make this sticky later to make sure it fits on bigger or smaller screens-->
+      <a href="index.html" class="logo">AM</a>
+      <ul>
+        <li><a href="#">About</a></li>
+        <li><a href="index.html#projectSection">Portfolio</a></li>
+        <li><a href="#">Contact</a></li>
+      </ul>
+    </header>
+    <section class="projSelectionP">
+      <div class="container">
+        <div id="pic">
+          <img src="img/Untitled_Artwork.png" alt="alt text" />
+        </div>
+        <div id="info1">
+          <h2>Project #1</h2>
+        </div>
+        <div id="pic">
+          <img src="img/Untitled_Artwork.png" alt="alt text" />
+        </div>
+        <div id="info2">
+          <h2>Project #2</h2>
+        </div>
+      </div>
+    </section>
+  </body>
 </html>
