Fixed Link Bug and Added wrapper
- Fixed the link bug by removing position=realtive from div element
- Added a wrapper div around body elements, need to fix index.html
- Added flexbox to project selection

--- a/projectPage_Code.html
+++ b/projectPage_Code.html
@@ -13,30 +13,33 @@
     rel="stylesheet"
   </head>
   <body style="background-color: black">
-    <header>
-      <!-- may make this sticky later to make sure it fits on bigger or smaller screens-->
-      <a href="index.html" class="logo">AM</a>
-      <ul>
-        <li><a href="#">About</a></li>
-        <li><a href="index.html#projectSection">Portfolio</a></li>
-        <li><a href="#">Contact</a></li>
-      </ul>
-    </header>
-    <section class="projSelectionP">
-      <div class="container">
-        <div id="pic">
-          <img src="img/Untitled_Artwork.png" alt="alt text" />
+    <div id="wrapper">
+      <header>
+        <!-- may make this sticky later to make sure it fits on bigger or smaller screens-->
+        <a href="index.html" class="logo">AM</a>
+        <ul>
+          <li><a href="#">About</a></li>
+          <li><a href="index.html#projectSection">Portfolio</a></li>
+          <li><a href="#">Contact</a></li>
+        </ul>
+      </header>
+      <section class="projSelectionP">
+        <div class="container">
+          <div id="pic">
+            <img src="img/Untitled_Artwork.png" alt="alt text" />
+          </div>
+          <div id="info">
+            <h2>Project #1</h2>
+            words i guess
+          </div>
+          <div id="pic">
+            <img src="img/Untitled_Artwork.png" alt="alt text" />
+          </div>
+          <div id="info">
+            <h2>Project #2</h2>
+          </div>
         </div>
-        <div id="info1">
-          <h2>Project #1</h2>
-        </div>
-        <div id="pic">
-          <img src="img/Untitled_Artwork.png" alt="alt text" />
-        </div>
-        <div id="info2">
-          <h2>Project #2</h2>
-        </div>
-      </div>
-    </section>
+      </section>
+    </div>
   </body>
 </html>
