--- a/index.html
+++ b/index.html
@@ -13,47 +13,43 @@
       rel="stylesheet"
     />
   </head>
-  <body>
-    <header>
-      <!-- may make this sticky later to make sure it fits on bigger or smaller screens-->
-      <a href="#" class="logo">AM</a>
-      <ul>
-        <li><a href="#">About</a></li>
-        <li><a href="#projectSection">Portfolio</a></li>
-        <li><a href="#">Contact</a></li>
-      </ul>
-    </header>
-    <section class="banner">
-      <div class="picOffice">
-        <img
-          src="img/Untitled_Artwork.png"
-          alt="gif of me moving my mouth with words, <q> Let's Talk</q>"
-        />
-      </div>
-      <div class="textbox">
-        <h2>Hello There!</h2>
-        <h3>
-          My name is <br /><span>Alicia Montgomery</span><br />
-          and welcome to my Portfolio!
-        </h3>
-      </div>
-    </section>
-    <section class="projectSection" id="projectSection">
-      <h2>What do you want to see?</h2>
-      <div class="projSelection">
-        
+  <div id="wrapper">
+    <body>
+      <header>
+        <!-- may make this sticky later to make sure it fits on bigger or smaller screens-->
+        <a href="#" class="logo">AM</a>
+        <ul>
+          <li><a href="#">About</a></li>
+          <li><a href="#projectSection">Portfolio</a></li>
+          <li><a href="#">Contact</a></li>
+        </ul>
+      </header>
+      <section class="banner">
+        <div class="picOffice">
+          <img
+            src="img/Untitled_Artwork.png"
+            alt="gif of me moving my mouth with words, <q> Let's Talk</q>"
+          />
+        </div>
+        <div class="textbox">
+          <h2>Hello There!</h2>
+          <h3>
+            My name is <br /><span>Alicia Montgomery</span><br />
+            and welcome to my Portfolio!
+          </h3>
+        </div>
+      </section>
+      <section class="projectSection" id="projectSection">
+        <h2>What do you want to see?</h2>
+        <div class="projSelection">
           <a href="projectPage_Code.html">
-            <div>
-              Coding
-            </div>
-            </a>
-      
+            <div>Coding</div>
+          </a>
           <a href="#">
-            <div>
-              Art
-            </div>
-            </a>
-      </div>
-    </section>
-  </body>
+            <div>Art</div>
+          </a>
+        </div>
+      </section>
+    </body>
+  </div>
 </html>
