Fixed issue with hierarchy and Changed Styles
- Changed the hierarchy in index.html to better fit the added wrapper
- Changed style.css with style changes
- Adjusted placement of wrapper div in projectPage_Code.html
- Added body style from projectPage_Code.htl to style.css
- Added progress pic to img folder

--- a/index.html
+++ b/index.html
@@ -40,14 +40,16 @@
         </div>
       </section>
       <section class="projectSection" id="projectSection">
-        <h2>What do you want to see?</h2>
-        <div class="projSelection">
-          <a href="projectPage_Code.html">
-            <div>Coding</div>
-          </a>
-          <a href="#">
-            <div>Art</div>
-          </a>
+        <div class="containerPS">
+          <div id="title">
+            <h2>What do you want to see?</h2>
+          </div>
+          <div id="box">
+            <a href="projectPage_Code.html">Coding</a>
+          </div>
+          <div id="box">
+            <a href="#">Art</a>
+          </div>
         </div>
       </section>
     </body>
