--- a/projectPage_Code.html
+++ b/projectPage_Code.html
@@ -12,8 +12,8 @@
     href="https://fonts.googleapis.com/css2?family=Fredoka+One&family=Open+Sans:wght@400;700&display=swap"
     rel="stylesheet"
   </head>
-  <body style="background-color: black">
-    <div id="wrapper">
+  <div id="wrapper">
+    <body>
       <header>
         <!-- may make this sticky later to make sure it fits on bigger or smaller screens-->
         <a href="index.html" class="logo">AM</a>
@@ -40,6 +40,6 @@
           </div>
         </div>
       </section>
-    </div>
-  </body>
+    </body>
+  </div>
 </html>
