Fixed Portfolio Link
- Fixed the portfolio link by changing the structure in index.html and
adding to the style sheet
- updated project page with more information

--- a/projectPage_Code.html
+++ b/projectPage_Code.html
@@ -30,7 +30,11 @@
           </div>
           <div id="info">
             <h2>Project #1</h2>
-            words i guess
+            <p>This is a little blurb about the project</p>
+            <h4>
+              <span id="bold">Languages:</span> Python, HTML, CSS, JavaScript
+            </h4>
+            <h4><span id="bold">Date:</span> xx/xx/xxxx</h4>
           </div>
           <div id="pic">
             <img src="img/Untitled_Artwork.png" alt="alt text" />
