--- a/index.html
+++ b/index.html
@@ -45,10 +45,10 @@
             <h2>What do you want to see?</h2>
           </div>
           <div id="box">
-            <a href="projectPage_Code.html">Coding</a>
+            <a href="projectPage_Code.html"><div>Coding</div></a>
           </div>
           <div id="box">
-            <a href="#">Art</a>
+            <a href="#"><div>Art</div></a>
           </div>
         </div>
       </section>
