Updated small changes and Added TODO List

--- a/index.html
+++ b/index.html
@@ -13,14 +13,20 @@
       rel="stylesheet"
     />
   </head>
+  <!-- 
+    TODO
+    - add a back to the top button
+    - add underline to the part of section in, in the header
+    - on hover over portfolio links, make it light up
+  -->
   <div id="wrapper">
     <body>
       <header>
         <!-- may make this sticky later to make sure it fits on bigger or smaller screens-->
         <a href="#" class="logo">AM</a>
         <ul>
-          <li><a href="#">About</a></li>
           <li><a href="#projectSection">Portfolio</a></li>
+          <li><a href="#">About</a></li>
           <li><a href="#">Contact</a></li>
         </ul>
       </header>
