--- a/projectPage_Code.html
+++ b/projectPage_Code.html
@@ -12,19 +12,27 @@
     href="https://fonts.googleapis.com/css2?family=Fredoka+One&family=Open+Sans:wght@400;700&display=swap"
     rel="stylesheet"
   </head>
+  <!-- 
+    TODO
+    - add a back to the top button
+    - update with the correct information on projects
+    - add link on the entire project selection
+    - add underline to the part of section in, in the header
+  -->
   <div id="wrapper">
     <body>
       <header>
         <!-- may make this sticky later to make sure it fits on bigger or smaller screens-->
         <a href="index.html" class="logo">AM</a>
         <ul>
-          <li><a href="#">About</a></li>
           <li><a href="index.html#projectSection">Portfolio</a></li>
+          <li><a href="#">About</a></li>
           <li><a href="#">Contact</a></li>
         </ul>
       </header>
       <section class="projSelectionP">
         <div class="container">
+          <div id="titleC"><h2>Coding Projects</h2></div>
           <div id="pic">
             <img src="img/Untitled_Artwork.png" alt="alt text" />
           </div>
@@ -41,6 +49,11 @@
           </div>
           <div id="info">
             <h2>Project #2</h2>
+            <p>This is a little blurb about the project</p>
+            <h4>
+              <span id="bold">Languages:</span> Python, HTML, CSS, JavaScript
+            </h4>
+            <h4><span id="bold">Date:</span> xx/xx/xxxx</h4>
           </div>
         </div>
       </section>
