--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     - add a back to the top button
     - add underline to the part of section in, in the header
     - on hover over portfolio links, make it light up
+    - add copyright footer at bottom of page
   -->
   <div id="wrapper">
     <body>
@@ -54,7 +55,7 @@
             <a href="projectPage_Code.html"><div>Coding</div></a>
           </div>
           <div id="box">
-            <a href="#"><div>Art</div></a>
+            <a href="projectPage_Art.html"><div>Art</div></a>
           </div>
         </div>
       </section>
