--- a/projectPage_Art.html
+++ b/projectPage_Art.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>ProjectPage - Code</title>
+    <title>ProjectPage - Art</title>
     <link href="style.css" rel="stylesheet" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -34,16 +34,14 @@
       </header>
       <section class="projSelectionP">
         <div class="container">
-          <div id="titleC"><h2>Coding Projects</h2></div>
+          <div id="titleC"><h2>Art Projects</h2></div>
           <div id="pic">
             <img src="img/Untitled_Artwork.png" alt="alt text" />
           </div>
           <div id="info">
             <h2>Project #1</h2>
             <p>This is a little blurb about the project</p>
-            <h4>
-              <span id="bold">Languages:</span> Python, HTML, CSS, JavaScript
-            </h4>
+            <h4><span id="bold">Programs:</span> Photoshop, Illustrator</h4>
             <h4><span id="bold">Date:</span> xx/xx/xxxx</h4>
           </div>
           <div id="pic">
@@ -52,9 +50,7 @@
           <div id="info">
             <h2>Project #2</h2>
             <p>This is a little blurb about the project</p>
-            <h4>
-              <span id="bold">Languages:</span> Python, HTML, CSS, JavaScript
-            </h4>
+            <h4><span id="bold">Programs:</span> Photoshop, Illustrator</h4>
             <h4><span id="bold">Date:</span> xx/xx/xxxx</h4>
           </div>
         </div>
