--- a/projectPage_Code.html
+++ b/projectPage_Code.html
@@ -35,10 +35,11 @@
       <section class="projSelectionP">
         <div class="container">
           <div id="titleC"><h2>Coding Projects</h2></div>
-          <div id="pic">
-            <img src="img/Untitled_Artwork.png" alt="alt text" />
+          <div id="contain1"><a href="projectPageC_1.html"></a></div>
+          <div id="pic1">
+            <img src="img/Let's_Talk.gif" alt="alt text" />
           </div>
-          <div id="info">
+          <div id="info1">
             <h2>Project #1</h2>
             <p>This is a little blurb about the project</p>
             <h4>
@@ -46,10 +47,11 @@
             </h4>
             <h4><span id="bold">Date:</span> xx/xx/xxxx</h4>
           </div>
-          <div id="pic">
-            <img src="img/Untitled_Artwork.png" alt="alt text" />
+          <div id="contain2"><a href="projectPageC_1.html"></a></div>
+          <div id="pic2">
+            <img src="img/draftWebsite1.png" alt="alt text" />
           </div>
-          <div id="info">
+          <div id="info2">
             <h2>Project #2</h2>
             <p>This is a little blurb about the project</p>
             <h4>
