Updated the Art project page

--- a/projectPage_Art.html
+++ b/projectPage_Art.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>ProjectPage - Art</title>
+    <title>ProjectPage - Code</title>
     <link href="style.css" rel="stylesheet" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -35,19 +35,21 @@
       <section class="projSelectionP">
         <div class="container">
           <div id="titleC"><h2>Art Projects</h2></div>
-          <div id="pic">
-            <img src="img/Untitled_Artwork.png" alt="alt text" />
+          <div id="contain1"><a href="#"></a></div>
+          <div id="pic1">
+            <img src="img/Let's_Talk.gif" alt="alt text" />
           </div>
-          <div id="info">
+          <div id="info1">
             <h2>Project #1</h2>
             <p>This is a little blurb about the project</p>
             <h4><span id="bold">Programs:</span> Photoshop, Illustrator</h4>
             <h4><span id="bold">Date:</span> xx/xx/xxxx</h4>
           </div>
-          <div id="pic">
-            <img src="img/Untitled_Artwork.png" alt="alt text" />
+          <div id="contain2"><a href="#"></a></div>
+          <div id="pic2">
+            <img src="img/draftWebsite1.png" alt="alt text" />
           </div>
-          <div id="info">
+          <div id="info2">
             <h2>Project #2</h2>
             <p>This is a little blurb about the project</p>
             <h4><span id="bold">Programs:</span> Photoshop, Illustrator</h4>
