--- a/projectPage_Code.html
+++ b/projectPage_Code.html
@@ -42,21 +42,17 @@
           <div id="info1">
             <h2>Project #1</h2>
             <p>This is a little blurb about the project</p>
-            <h4>
-              <span id="bold">Languages:</span> Python, HTML, CSS, JavaScript
-            </h4>
+            <h4><span id="bold">Languages:</span> HTML, CSS, Javascript</h4>
             <h4><span id="bold">Date:</span> xx/xx/xxxx</h4>
           </div>
-          <div id="contain2"><a href="projectPageC_1.html"></a></div>
+          <div id="contain2"><a href="#"></a></div>
           <div id="pic2">
             <img src="img/draftWebsite1.png" alt="alt text" />
           </div>
           <div id="info2">
             <h2>Project #2</h2>
             <p>This is a little blurb about the project</p>
-            <h4>
-              <span id="bold">Languages:</span> Python, HTML, CSS, JavaScript
-            </h4>
+            <h4><span id="bold">Languages:</span> HTML, CSS, Javascript</h4>
             <h4><span id="bold">Date:</span> xx/xx/xxxx</h4>
           </div>
         </div>
