Added placeholders for project page
- Added placeholders for 1 project page, more to come for the other
  pages
- Updated class names for CSS file

--- a/projectPage_Code.html
+++ b/projectPage_Code.html
@@ -32,7 +32,7 @@
           <li><a href="#">Contact</a></li>
         </ul>
       </header>
-      <section class="projSelectionP">
+      <section class="secContainer">
         <div class="container">
           <div id="titleC"><h2>Coding Projects</h2></div>
           <div id="contain1"><a href="projectPageC_1.html"></a></div>
