--- a/projectPage_Art.html
+++ b/projectPage_Art.html
@@ -32,7 +32,7 @@
           <li><a href="#">Contact</a></li>
         </ul>
       </header>
-      <section class="projSelectionP">
+      <section class="secContainer">
         <div class="container">
           <div id="titleC"><h2>Art Projects</h2></div>
           <div id="contain1"><a href="#"></a></div>
