Added Back button

--- a/projectPageC_1.html
+++ b/projectPageC_1.html
@@ -30,6 +30,7 @@
       </header>
       <section class="secContainer">
         <div class="containerTemp">
+          <button>Back</button>
           <div id="title"><h2>Project 1</h2></div>
           <div id="imgc1">
             <img src="img/draftWebsite1.png" alt="website image" />
