Created back button

--- a/projectPageC_1.html
+++ b/projectPageC_1.html
@@ -31,6 +31,13 @@
       <section class="secContainer">
         <div class="containerTemp">
           <button>Back</button>
+          <form action="">
+            <input
+              type="button"
+              value="projects"
+              onclick="window.history.go(-1)"
+            />
+          </form>
           <div id="title"><h2>Project 1</h2></div>
           <div id="imgc1">
             <img src="img/draftWebsite1.png" alt="website image" />
