Updated back button
- Updated the back button from form to href
- Updated button with hover state

--- a/projectPageC_1.html
+++ b/projectPageC_1.html
@@ -30,14 +30,7 @@
       </header>
       <section class="secContainer">
         <div class="containerTemp">
-          <button>Back</button>
-          <form action="">
-            <input
-              type="button"
-              value="projects"
-              onclick="window.history.go(-1)"
-            />
-          </form>
+          <a id="backLink" href="projectPage_Code.html">Back to Projects</a>
           <div id="title"><h2>Project 1</h2></div>
           <div id="imgc1">
             <img src="img/draftWebsite1.png" alt="website image" />
@@ -84,7 +77,7 @@
               tempore deleniti.
             </p>
           </div>
-          <div id="parac1">
+          <div id="parac2">
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi,
               vitae nihil. Magni veritatis eius, incidunt facilis veniam sint
