--- a/projectPageC_1.html
+++ b/projectPageC_1.html
@@ -15,7 +15,7 @@
   <!--
     TODO
     - Make a slideshow for more images w/captions
-    - Make a back button 
+    - make text align ot the center 
   -->
   <div id="wrapper">
     <body>
@@ -119,6 +119,18 @@
               neque.
             </p>
           </div>
+        </div>
+        <div class="container1">
+          <div id="titleC"><h2>Other Coding Projects</h2></div>
+          <div id="contain1"><a href="projectPageC_1.html"></a></div>
+          <div id="pic1">
+            <img src="img/Let's_Talk.gif" alt="alt text" />
+          </div>
+          <div id="info1">
+            <h2>Project #2</h2>
+            <p>This is a little blurb about the project</p>
+            <h4><span id="bold">Languages:</span> HTML, CSS, Javascript</h4>
+            <h4><span id="bold">Date:</span> xx/xx/xxxx</h4>
         </div>
       </section>
     </body>
