--- a/projectPage_Code.html
+++ b/projectPage_Code.html
@@ -28,7 +28,7 @@
         <a href="index.html" class="logo">AM</a>
         <ul>
           <li><a href="index.html#projectSection">Portfolio</a></li>
-          <li><a href="#">About</a></li>
+          <li><a href="aboutMe.html">About</a></li>
           <li><a href="#">Contact</a></li>
         </ul>
       </header>
