Added link buttons to About Page
- Created svgs for link buttons

--- a/aboutMe.html
+++ b/aboutMe.html
@@ -60,6 +60,30 @@
         </div>
         <div id="contactContainer">
           <div id="titleCo"><h2>Let's Connect</h2></div>
+          <div id="img1">
+            <a
+              href="https://www.linkedin.com/in/aliciamontgomery1/"
+              target="_blank"
+              rel="noopener noreferrer"
+              ><img src="img/linkeIn.svg" alt="LinkedIn Page"
+            /></a>
+          </div>
+          <div id="img2">
+            <a
+              href="mailto:admonty27@gmail.com"
+              target="_blank"
+              rel="noopener noreferrer"
+              ><img src="img/Email.svg" alt="Email Address"
+            /></a>
+          </div>
+          <div id="img3">
+            <a
+              href="https://github.com/amonty27"
+              target="_blank"
+              rel="noopener noreferrer"
+              ><img src="img/Github.svg" alt="Github Page"
+            /></a>
+          </div>
         </div>
       </section>
     </body>
