Removed Contact in nav bar
- Removed the "Contact" link at the top of the nav bar since contact
  info is on other page

--- a/projectPage_Code.html
+++ b/projectPage_Code.html
@@ -29,7 +29,6 @@
         <ul>
           <li><a href="index.html#projectSection">Portfolio</a></li>
           <li><a href="aboutMe.html">About</a></li>
-          <li><a href="#">Contact</a></li>
         </ul>
       </header>
       <section class="secContainer">
@@ -45,7 +44,7 @@
             <h4><span id="bold">Languages:</span> HTML, CSS, Javascript</h4>
             <h4><span id="bold">Date:</span> xx/xx/xxxx</h4>
           </div>
-          <div id="contain2"><a href="#"></a></div>
+          <div id="contain2"><a href="projectPageC_1.html"></a></div>
           <div id="pic2">
             <img src="img/draftWebsite1.png" alt="alt text" />
           </div>
