--- a/aboutMe.html
+++ b/aboutMe.html
@@ -21,6 +21,7 @@
         <ul>
           <li><a href="index.html#projectSection">Portfolio</a></li>
           <li><a href="aboutMe.html">About</a></li>
+          <li><a href="#">Contact</a></li>
         </ul>
       </header>
       <section class="secContainer">
