--- a/projectPage_Art.html
+++ b/projectPage_Art.html
@@ -34,22 +34,22 @@
       <section class="secContainer">
         <div class="container">
           <div id="titleC"><h2>Art Projects</h2></div>
-          <div id="contain1"><a href="projectPageA_1.html"></a></div>
+          <div id="contain1"><a href="#"></a></div>
           <div id="pic1">
             <img src="img/Let's_Talk.gif" alt="alt text" />
           </div>
           <div id="info1">
-            <h2>Type Haus - Font Collab</h2>
+            <h2>Project #1</h2>
             <p>This is a little blurb about the project</p>
             <h4><span id="bold">Programs:</span> Photoshop, Illustrator</h4>
             <h4><span id="bold">Date:</span> xx/xx/xxxx</h4>
           </div>
-          <div id="contain2"><a href="projectPageA_2.html"></a></div>
+          <div id="contain2"><a href="#"></a></div>
           <div id="pic2">
             <img src="img/draftWebsite1.png" alt="alt text" />
           </div>
           <div id="info2">
-            <h2>Hungry Society - Article Banners</h2>
+            <h2>Project #2</h2>
             <p>This is a little blurb about the project</p>
             <h4><span id="bold">Programs:</span> Photoshop, Illustrator</h4>
             <h4><span id="bold">Date:</span> xx/xx/xxxx</h4>
