--- a/projectPage_Code.html
+++ b/projectPage_Code.html
@@ -39,17 +39,17 @@
             <img src="img/Let's_Talk.gif" alt="alt text" />
           </div>
           <div id="info1">
-            <h2>Portfolio Website</h2>
+            <h2>Project #1</h2>
             <p>This is a little blurb about the project</p>
             <h4><span id="bold">Languages:</span> HTML, CSS, Javascript</h4>
             <h4><span id="bold">Date:</span> xx/xx/xxxx</h4>
           </div>
-          <div id="contain2"><a href="projectPageC_2.html"></a></div>
+          <div id="contain2"><a href="projectPageC_1.html"></a></div>
           <div id="pic2">
             <img src="img/draftWebsite1.png" alt="alt text" />
           </div>
           <div id="info2">
-            <h2>Moth Classifier</h2>
+            <h2>Project #2</h2>
             <p>This is a little blurb about the project</p>
             <h4><span id="bold">Languages:</span> HTML, CSS, Javascript</h4>
             <h4><span id="bold">Date:</span> xx/xx/xxxx</h4>
