--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@
         <a href="#" class="logo">AM</a>
         <ul>
           <li><a href="#projectSection">Portfolio</a></li>
-          <li><a href="aboutMe.html">About</a></li>
+          <li><a href="#">About</a></li>
+          <li><a href="#">Contact</a></li>
         </ul>
       </header>
       <section class="banner">
