Fixing main branch
Fixing the Main branch by manually adding the older files and updating them to before parcel

--- a/index.html
+++ b/index.html
@@ -27,8 +27,7 @@
         <a href="#" class="logo">AM</a>
         <ul>
           <li><a href="#projectSection">Portfolio</a></li>
-          <li><a href="#">About</a></li>
-          <li><a href="#">Contact</a></li>
+          <li><a href="aboutMe.html">About</a></li>
         </ul>
       </header>
       <section class="banner">
