--- a/projectPageC_2.html
+++ b/projectPageC_2.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>ProjectPage - Code - Portfolio Website</title>
+    <title>ProjectPage - Code - Moth Classifier</title>
     <link href="style.css" rel="stylesheet" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -15,7 +15,7 @@
   <!--
     TODO
     - Make a slideshow for more images w/captions
-    - make text align to the center 
+    - make text align ot the center 
     - make link at bottom to other project change color on hover
   -->
   <div id="wrapper">
@@ -31,7 +31,7 @@
       <section class="secContainer">
         <div class="containerTemp">
           <a id="backLink" href="projectPage_Code.html">Back to Projects</a>
-          <div id="title"><h2>Portfolio Website</h2></div>
+          <div id="title"><h2>Moth Classifier</h2></div>
           <div id="imgc1">
             <img src="img/draftWebsite1.png" alt="website image" />
           </div>
@@ -122,12 +122,12 @@
         </div>
         <div class="container1">
           <div id="titleC"><h2>Other Coding Projects</h2></div>
-          <div id="contain1"><a href="projectPageC_2.html"></a></div>
+          <div id="contain1"><a href="projectPageC_1.html"></a></div>
           <div id="pic1">
             <img src="img/Let's_Talk.gif" alt="alt text" />
           </div>
           <div id="info1">
-            <h2>Moth Classifier</h2>
+            <h2>Portfolio Website</h2>
             <p>This is a little blurb about the project</p>
             <h4><span id="bold">Languages:</span> HTML, CSS, Javascript</h4>
             <h4><span id="bold">Date:</span> xx/xx/xxxx</h4>
