--- a/projectPageA_2.html
+++ b/projectPageA_2.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>ProjectPage - Code - Portfolio Website</title>
+    <title>ProjectPage - Art - Hungry Society Article Banners</title>
     <link href="style.css" rel="stylesheet" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -30,8 +30,8 @@
       </header>
       <section class="secContainer">
         <div class="containerTemp">
-          <a id="backLink" href="projectPage_Code.html">Back to Projects</a>
-          <div id="title"><h2>Portfolio Website</h2></div>
+          <a id="backLink" href="projectPage_Art.html">Back to Projects</a>
+          <div id="title"><h2>Hungry Society - Article Banners</h2></div>
           <div id="imgc1">
             <img src="img/draftWebsite1.png" alt="website image" />
           </div>
@@ -121,13 +121,13 @@
           </div>
         </div>
         <div class="container1">
-          <div id="titleC"><h2>Other Coding Projects</h2></div>
-          <div id="contain1"><a href="projectPageC_2.html"></a></div>
+          <div id="titleC"><h2>Other Art Projects</h2></div>
+          <div id="contain1"><a href="projectPageA_1.html"></a></div>
           <div id="pic1">
             <img src="img/Let's_Talk.gif" alt="alt text" />
           </div>
           <div id="info1">
-            <h2>Moth Classifier</h2>
+            <h2>Type Haus - Font Collab</h2>
             <p>This is a little blurb about the project</p>
             <h4><span id="bold">Languages:</span> HTML, CSS, Javascript</h4>
             <h4><span id="bold">Date:</span> xx/xx/xxxx</h4>
