--- a/projectPageC_1.html
+++ b/projectPageC_1.html
@@ -36,58 +36,23 @@
             <img src="img/draftWebsite1.png" alt="website image" />
           </div>
           <div id="parac1">
+            <h3 class="h3_para">Purpose</h3>
             <p>
-              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Itaque
-              unde eos eius quas dicta vero architecto molestiae maxime quae,
-              accusantium aliquid cum cumque ipsa dolorem asperiores aliquam
-              consequatur aspernatur reiciendis incidunt exercitationem
-              nesciunt! Sunt, officiis. Alias temporibus perspiciatis voluptatum
-              nemo neque vero quae minima voluptatibus excepturi quidem
-              accusantium odit non ullam sed, eaque dolorum illum numquam
-              deleniti, rem veniam amet asperiores cumque officia! Quaerat
-              placeat in optio ex laborum, a libero voluptatum necessitatibus
-              aliquam deserunt repellat at, distinctio amet tenetur non
-              architecto asperiores! Repellat suscipit hic, beatae ad, dolorem,
-              tenetur corrupti laudantium autem error quis voluptate illum!
-              Quibusdam, non quia adipisci veniam itaque assumenda provident ab
-              necessitatibus, magnam ratione officia nam minus fuga quos
-              deserunt rerum impedit debitis praesentium? Fugit sapiente
-              assumenda voluptas obcaecati placeat deserunt eos nihil inventore
-              alias minima, recusandae ipsa illum fuga quibusdam tenetur quia
-              labore tempora eligendi? Blanditiis iure iusto nisi dolorum,
-              voluptatum obcaecati similique nihil earum accusamus maiores iste
-              ullam quae molestiae omnis non assumenda maxime ipsam cum impedit
-              odit? Est cum quisquam voluptatem rerum minus incidunt repellat
-              accusamus facilis deserunt minima corrupti quo doloribus maiores
-              quaerat ullam architecto, corporis tempore nihil cupiditate neque
-              aspernatur? Eligendi unde quo veniam tempore adipisci harum amet
-              magni est quod accusamus autem voluptatem architecto cumque,
-              officiis expedita dolore molestiae debitis corrupti velit nemo
-              modi. Saepe voluptatum voluptatibus voluptates illum magnam,
-              necessitatibus iste recusandae quae deserunt quisquam, est
-              consequatur fuga, ipsa corporis omnis laudantium officia ex!
-              Impedit eligendi iure repudiandae perferendis, dolorem nihil
-              maiores cum blanditiis quasi est, laudantium nam minus quaerat
-              accusantium sint magnam delectus voluptates debitis asperiores
-              sapiente harum. Quidem aspernatur blanditiis nesciunt excepturi
-              deleniti atque sapiente officia dignissimos? Architecto eum
-              blanditiis ea quod. Ipsa iusto ducimus expedita corrupti non a,
-              totam ipsum labore! Exercitationem voluptatibus natus ipsum
-              ratione, labore similique consequatur expedita non ad officiis
-              tempore deleniti.
-            </p>
+              The reason I wanted to create this website was really to test my skills in HTML and CSS. I recently started teaching myself how to use them, so I can have a good foundation before moving onto JavaScript and JavaScript libraries, like React or Vue. 
+              I also wanted a website I could 100% customize, only limited by the skills I have.
+              </p> 
+              <h3 class="h3_para">Planning</h3>
+              <p>  Before I started, I did a lot of research (aka, watching YouTube tutorials). To avoid what others have called “tutorial hell” I quickly started testing out techniques I was learning in HTML. Once I had a very basic understand of different types, formatting, etc., I started writing down everything that would be featured on the site. This included the homepage, the projects, and the about me page. I tried to keep it simple, so I wouldn’t overwhelm myself. I also started jotting down ideas for layout, images, etc. to get an idea of what I wanted. A lot of the ideas that I had seemed to be out of my skill level, but after completing the website, I would like to go back and attempt them. <br>
+              Once I decided the basics, I moved on to wire framing my website in Figma. I decided on Figma since it was an application I have used before (on the Moth Classifier project) and I knew I could pick it back up. I first created a Mood Board to get an idea of what colors, fonts, and mood I wanted my project to be. Then I moved onto the webpages themselves. Navigating through Figma itself was not that difficult. It is very similar to Photoshop and Illustrator that I have used before. Any time I faced a problem, I found the solution through Google. 
+              (Link to <a href="https://www.figma.com/file/CSWbiWfHn9qr3yY5qCLrUR/Portfolio-Moodboard?node-id=0%3A1" target="_blank">Figma</a> File)</p>
           </div>
-          <div id="parac2">
+          <div id="parac1">
+            <h3 class="h3_para">Creating the Website</h3>
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi,
-              vitae nihil. Magni veritatis eius, incidunt facilis veniam sint
-              est iste suscipit commodi? Placeat asperiores natus, iure
-              voluptate nulla error assumenda laudantium eaque consequatur odit
-              temporibus officiis adipisci doloremque quo quia. Exercitationem
-              temporibus ipsum sequi nam placeat corrupti voluptatem ab iste
-              quia aut libero cum debitis est, porro aliquid voluptatum deserunt
-              dicta sapiente nihil? Consequatur officiis quasi atque molestias
-              quae reiciendis.
+            
+              Finally, the daunting part was upon me: creating the webpage.<br>
+              At first, I wanted to add JavaScript to my site, but I decided to test the limits with HTML and CSS, so I could really understand it, (also less scary than JavaScript). <br>
+              Over a couple of months, I continually updated my pages. Anytime I thought of something I wanted to include, I googled the information. For example, after looking for a way to make a grid format for my webpages to organize them, I discovered CSS Grid and Flexbox. I completely changed how I was organizing elements on the page. 
             </p>
           </div>
           <div id="imgc1">
@@ -97,26 +62,10 @@
             <img src="img/draftWebsite1.png" alt="website image" />
           </div>
           <div id="parac1">
+            <h3 class="h3_para">Conclusion</h3>
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              Aspernatur saepe excepturi incidunt aliquam tempore officiis rerum
-              optio eveniet corrupti iure tempora asperiores quisquam illum vel
-              alias aperiam eum ea, laudantium blanditiis animi explicabo?
-              Cumque eos molestiae, cupiditate dolorem delectus laborum?
-              Corporis quas quod obcaecati ad dolore neque vel consectetur,
-              exercitationem, officia optio, natus error unde repellendus atque.
-              Placeat vel corrupti suscipit sint ratione sequi. Minima illum hic
-              blanditiis pariatur dolores, impedit omnis qui repellendus
-              exercitationem? Assumenda, voluptate ex fugit nam voluptatem ab
-              eius fugiat qui itaque beatae delectus quos eaque, necessitatibus
-              iure, voluptas vitae distinctio dolorum fuga ad mollitia.
-              Similique minus esse vel mollitia, excepturi nulla sapiente
-              explicabo omnis voluptatem deleniti maiores id, numquam ut. Ullam
-              harum laborum officiis tenetur enim sapiente? Nobis possimus
-              explicabo, maxime, perspiciatis, eius debitis magnam consequuntur
-              omnis eos non necessitatibus molestiae delectus hic ullam ducimus.
-              Id sapiente cupiditate sed adipisci voluptate sequi totam alias
-              neque.
+              I was able to finish my first webpage! There are countless things I want to do to improve it, but I’m satisfied with my first attempt! It may continue to change over the next couple of months, after I work on some other projects to up my skills. My next plan is to learn JavaScript, so I can begin to use some JavaScript libraries such as React or Vue. Thanks for reading!
+              
             </p>
           </div>
         </div>
@@ -128,9 +77,9 @@
           </div>
           <div id="info1">
             <h2>Moth Classifier</h2>
-            <p>This is a little blurb about the project</p>
-            <h4><span id="bold">Languages:</span> HTML, CSS, Javascript</h4>
-            <h4><span id="bold">Date:</span> xx/xx/xxxx</h4>
+            <p>Classifying Moths with Machine Learning</p>
+            <h4><span class="bold">Languages:</span> Python </h4>
+            <h4><span class="bold">Date:</span> Sept 2019 - May 2020 </h4>
         </div>
       </section>
     </body>
