--- a/projectPage_Code.html
+++ b/projectPage_Code.html
@@ -40,9 +40,9 @@
           </div>
           <div id="info1">
             <h2>Portfolio Website</h2>
-            <p>This is a little blurb about the project</p>
-            <h4><span id="bold">Languages:</span> HTML, CSS, Javascript</h4>
-            <h4><span id="bold">Date:</span> xx/xx/xxxx</h4>
+            <p>This very website you are on!</p>
+            <h4><span class="bold">Languages:</span> HTML + CSS</h4>
+            <h4><span class="bold">Date:</span> Feb 2022</h4>
           </div>
           <div id="contain2"><a href="projectPageC_2.html"></a></div>
           <div id="pic2">
@@ -50,9 +50,9 @@
           </div>
           <div id="info2">
             <h2>Moth Classifier</h2>
-            <p>This is a little blurb about the project</p>
-            <h4><span id="bold">Languages:</span> HTML, CSS, Javascript</h4>
-            <h4><span id="bold">Date:</span> xx/xx/xxxx</h4>
+            <p>Classifying Moths with Machine Learning</p>
+            <h4><span class="bold">Languages:</span> Python</h4>
+            <h4><span class="bold">Date:</span> Sept 2019 - May 2020</h4>
           </div>
         </div>
       </section>
