Update Code Pages
- Updated the images on the pages
- Added captions to the images

--- a/projectPageC_2.html
+++ b/projectPageC_2.html
@@ -33,7 +33,10 @@
           <a id="backLink" href="projectPage_Code.html">Back to Projects</a>
           <div id="title"><h2>Moth Classifier</h2></div>
           <div id="imgc1">
-            <img src="img/draftWebsite1.png" alt="website image" />
+            <figure>
+              <img src="img/ProjectsCodingProjectsMothClassifier_11.png" alt="Sketch of the System and its capabilities" />
+              <figcaption class="caption">Sketch of the system</figcaption>
+            </figure>
           </div>
           <div id="parac1">
             <h3 class="h3_para">Introduction</h3>
@@ -65,10 +68,16 @@
             </p>
           </div>
           <div id="imgc1">
-            <img src="img/draftWebsite1.png" alt="website image" />
+            <figure>
+              <img src="img/ProjectsCodingProjectsMothClassifier_4.jpg" alt="Prototype of the System made out of cardboard box, with camera and light attached" />
+              <figcaption class="caption">Prototype of the System</figcaption>
+            </figure>
           </div>
           <div id="imgc1">
-            <img src="img/draftWebsite1.png" alt="website image" />
+            <figure>
+              <img src="img/ProjectsCodingProjectsMothClassifier_3.png" alt="3d model of case to hold system" />
+              <figcaption class="caption">3D Model of case to house system</figcaption>
+            </figure>
           </div>
           <div id="parac1">
             <h3 class="h3_para">Project Timeline: Spring Semester</h3>
@@ -87,7 +96,7 @@
           <div id="titleC"><h2>Other Coding Projects</h2></div>
           <div id="contain1"><a href="projectPageC_1.html"></a></div>
           <div id="pic1">
-            <img src="img/Let's_Talk.gif" alt="alt text" />
+            <img src="img/draftWebsite1.png" alt="Screenshot of first draft of website in html" />
           </div>
           <div id="info1">
             <h2>Portfolio Website</h2>
