--- a/projectPageC_1.html
+++ b/projectPageC_1.html
@@ -33,7 +33,10 @@
           <a id="backLink" href="projectPage_Code.html">Back to Projects</a>
           <div id="title"><h2>Portfolio Website</h2></div>
           <div id="imgc1">
-            <img src="img/draftWebsite1.png" alt="website image" />
+            <figure>
+              <img src="img/portfolio_ (2).JPEG" alt="a sketch of an idea for the homepage hero section" />
+              <figcaption class="caption">Idea Sketch for Homepage Hero Section</figcaption>
+            </figure>
           </div>
           <div id="parac1">
             <h3 class="h3_para">Purpose</h3>
@@ -56,10 +59,17 @@
             </p>
           </div>
           <div id="imgc1">
-            <img src="img/draftWebsite1.png" alt="website image" />
+            <figure>
+              <img src="img/portfolio_ (1).JPEG" alt="Sketch of how the flexbox and grid would work for website" />
+              <figcaption class="caption">Trying to understand flexbox and grid for CSS </figcaption>
+            </figure>
           </div>
           <div id="imgc1">
-            <img src="img/draftWebsite1.png" alt="website image" />
+            <figure>
+              <img src="img/draftWebsite1.png" alt="Screenshot of first draft of website in html" />
+              <figcaption class="caption">First draft of website</figcaption>
+            </figure>
+           
           </div>
           <div id="parac1">
             <h3 class="h3_para">Conclusion</h3>
@@ -73,7 +83,7 @@
           <div id="titleC"><h2>Other Coding Projects</h2></div>
           <div id="contain1"><a href="projectPageC_2.html"></a></div>
           <div id="pic1">
-            <img src="img/Let's_Talk.gif" alt="alt text" />
+            <img src="img/ProjectsCodingProjectsMothClassifier_1.jpg" alt="Image of moth" />
           </div>
           <div id="info1">
             <h2>Moth Classifier</h2>
