--- a/projectPage_Code.html
+++ b/projectPage_Code.html
@@ -36,7 +36,10 @@
           <div id="titleC"><h2>Coding Projects</h2></div>
           <div id="contain1"><a href="projectPageC_1.html"></a></div>
           <div id="pic1">
-            <img src="img/Let's_Talk.gif" alt="alt text" />
+            <img
+              src="img/draftWebsite1.png"
+              alt="Screenshot of first draft of website in html"
+            />
           </div>
           <div id="info1">
             <h2>Portfolio Website</h2>
@@ -46,7 +49,10 @@
           </div>
           <div id="contain2"><a href="projectPageC_2.html"></a></div>
           <div id="pic2">
-            <img src="img/draftWebsite1.png" alt="alt text" />
+            <img
+              src="img/ProjectsCodingProjectsMothClassifier_1.jpg"
+              alt="picture of a moth"
+            />
           </div>
           <div id="info2">
             <h2>Moth Classifier</h2>
