--- a/aboutMe.html
+++ b/aboutMe.html
@@ -26,34 +26,23 @@
       <section class="secContainer">
         <div id="aboutContainer">
           <div id="titleA"><h2>About Me</h2></div>
-          <div id="imgA"><img src="img/draftWebsite1.png" alt="pic" /></div>
+          <div id="imgA">
+            <img
+              src="img/IMG_2028_MOV_AdobeCreativeCloudExpress.gif"
+              alt="Gif of Alicia posing in front of art installation"
+            />
+          </div>
           <div id="paraA">
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi
-              impedit dignissimos ipsam fugit voluptatum quam quaerat nihil
-              expedita eum, qui, reprehenderit quae nesciunt corrupti. Facilis
-              esse aut dolorum similique inventore nemo iste itaque perspiciatis
-              distinctio sint iusto eos voluptatum reprehenderit, voluptatem
-              animi, sapiente harum eius. Obcaecati ipsa quaerat earum!
-              Necessitatibus minima, numquam doloribus aspernatur eligendi
-              exercitationem ducimus? Tempora consequuntur iusto animi fugiat
-              omnis dignissimos facilis vero assumenda autem aliquam ab facere
-              in labore, molestias inventore at modi cumque enim eligendi rem
-              non esse incidunt. Officiis ad quis unde suscipit tempore quam
-              nihil porro laboriosam deserunt inventore iusto cumque in, quo
-              sunt, sapiente pariatur minus libero sit, provident mollitia quos
-              fuga est? Quibusdam tempora vero incidunt numquam dolores alias
-              aspernatur delectus, accusantium esse atque dolorum rerum quo
-              perspiciatis nisi cupiditate explicabo pariatur perferendis
-              officia rem voluptatibus quisquam sit est eos quas! Laborum nobis
-              nam quam iste saepe nesciunt harum vero molestias neque nemo sint
-              inventore laboriosam consequatur maxime molestiae doloribus
-              voluptate, facilis cum, quasi eos, rem esse. Quia dolor
-              repudiandae officia quod illum ab est facere reprehenderit.
-              Ratione repellat obcaecati architecto aut voluptatum reiciendis
-              deleniti aperiam et. Est, error dolorum deleniti, expedita
-              architecto, non officia quaerat ut voluptatem perspiciatis
-              asperiores voluptates.
+              Hello! My name is Alicia Montgomery. I am currently pursuing my
+              master's in Information Technology and graduated in 2020 with a
+              B.S. in Computer Science with a minor in Fine Arts. I am currently
+              exploring web design and development and learning as much as I can
+              with HTML, CSS, and JavaScript. I love working on projects that
+              challenge me and make me creative in my solutions. I am a problem
+              solver, hard worker, and passionate about putting together a
+              beautiful and functional piece, whether it be design or
+              programming!
             </p>
           </div>
         </div>
