--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       <section class="banner">
         <div class="picOffice">
           <img
-            src="img/Untitled_Artwork.png"
+            src="img/Asset 1@3x.png"
             alt="gif of me moving my mouth with words, <q> Let's Talk</q>"
           />
         </div>
