--- a/projectPageA_1.html
+++ b/projectPageA_1.html
@@ -33,90 +33,40 @@
           <a id="backLink" href="projectPage_Art.html">Back to Projects</a>
           <div id="title"><h2>Type Haus - Font Collab</h2></div>
           <div id="imgc1">
-            <img src="img/draftWebsite1.png" alt="website image" />
+            <figure>
+              <img src="img/TypeHaus_ (1).JPEG" alt="website image" />
+              <figcaption class="caption">Sketches of lowercase k</figcaption>
+            </figure>
           </div>
           <div id="parac1">
+            <h3 class="h3_para">Introduction</h3>
             <p>
-              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Itaque
-              unde eos eius quas dicta vero architecto molestiae maxime quae,
-              accusantium aliquid cum cumque ipsa dolorem asperiores aliquam
-              consequatur aspernatur reiciendis incidunt exercitationem
-              nesciunt! Sunt, officiis. Alias temporibus perspiciatis voluptatum
-              nemo neque vero quae minima voluptatibus excepturi quidem
-              accusantium odit non ullam sed, eaque dolorum illum numquam
-              deleniti, rem veniam amet asperiores cumque officia! Quaerat
-              placeat in optio ex laborum, a libero voluptatum necessitatibus
-              aliquam deserunt repellat at, distinctio amet tenetur non
-              architecto asperiores! Repellat suscipit hic, beatae ad, dolorem,
-              tenetur corrupti laudantium autem error quis voluptate illum!
-              Quibusdam, non quia adipisci veniam itaque assumenda provident ab
-              necessitatibus, magnam ratione officia nam minus fuga quos
-              deserunt rerum impedit debitis praesentium? Fugit sapiente
-              assumenda voluptas obcaecati placeat deserunt eos nihil inventore
-              alias minima, recusandae ipsa illum fuga quibusdam tenetur quia
-              labore tempora eligendi? Blanditiis iure iusto nisi dolorum,
-              voluptatum obcaecati similique nihil earum accusamus maiores iste
-              ullam quae molestiae omnis non assumenda maxime ipsam cum impedit
-              odit? Est cum quisquam voluptatem rerum minus incidunt repellat
-              accusamus facilis deserunt minima corrupti quo doloribus maiores
-              quaerat ullam architecto, corporis tempore nihil cupiditate neque
-              aspernatur? Eligendi unde quo veniam tempore adipisci harum amet
-              magni est quod accusamus autem voluptatem architecto cumque,
-              officiis expedita dolore molestiae debitis corrupti velit nemo
-              modi. Saepe voluptatum voluptatibus voluptates illum magnam,
-              necessitatibus iste recusandae quae deserunt quisquam, est
-              consequatur fuga, ipsa corporis omnis laudantium officia ex!
-              Impedit eligendi iure repudiandae perferendis, dolorem nihil
-              maiores cum blanditiis quasi est, laudantium nam minus quaerat
-              accusantium sint magnam delectus voluptates debitis asperiores
-              sapiente harum. Quidem aspernatur blanditiis nesciunt excepturi
-              deleniti atque sapiente officia dignissimos? Architecto eum
-              blanditiis ea quod. Ipsa iusto ducimus expedita corrupti non a,
-              totam ipsum labore! Exercitationem voluptatibus natus ipsum
-              ratione, labore similique consequatur expedita non ad officiis
-              tempore deleniti.
+              In a collaborative event hosted by TypeHaus, a discord channel for graphic designers and creatives, the community came together to create a Type Font (Think Times New Roman or Helvetica). Different members assigned other members in the community either a letter or character, sometimes both! The community hosted the event for two weeks. People shared what letters or characters they received and shared their ideas and sketches. 
             </p>
           </div>
           <div id="parac1">
+            <h3 class="h3_para">Process</h3>
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi,
-              vitae nihil. Magni veritatis eius, incidunt facilis veniam sint
-              est iste suscipit commodi? Placeat asperiores natus, iure
-              voluptate nulla error assumenda laudantium eaque consequatur odit
-              temporibus officiis adipisci doloremque quo quia. Exercitationem
-              temporibus ipsum sequi nam placeat corrupti voluptatem ab iste
-              quia aut libero cum debitis est, porro aliquid voluptatum deserunt
-              dicta sapiente nihil? Consequatur officiis quasi atque molestias
-              quae reiciendis.
+              I was assigned the lowercase k and the number 2. I started with many sketches to visualize my work. Getting ideas out on paper is my way of tackling projects. Aiming for something different but still recognizable, I made sketches that were loose to get ideas out quickly. 
+              Once I had an idea of what I wanted, I uploaded the images to Adobe Illustrator and began creating vectors. This was not my first-time using illustrator, but I am always finding new ways to do things. I really started to use the shapebuilder tool to combine shapes and shave off excess. It is a great way to make complex shapes using primitive ones.               
             </p>
           </div>
           <div id="imgc1">
-            <img src="img/draftWebsite1.png" alt="website image" />
+            <figure>
+              <img src="img/TypeHaus_ (2).JPEG" alt="website image" />
+              <figcaption class="caption">Sketches of the number 2</figcaption>
+            </figure>
           </div>
           <div id="imgc1">
-            <img src="img/draftWebsite1.png" alt="website image" />
+            <figure>
+              <img src="img/typehausCollab_ylissity_FINAL.png" alt="website image" />
+              <figcaption class="caption"> Final submission</figcaption>
+            </figure>
           </div>
           <div id="parac1">
+            <h3 class="h3_para">Finished Font</h3>
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              Aspernatur saepe excepturi incidunt aliquam tempore officiis rerum
-              optio eveniet corrupti iure tempora asperiores quisquam illum vel
-              alias aperiam eum ea, laudantium blanditiis animi explicabo?
-              Cumque eos molestiae, cupiditate dolorem delectus laborum?
-              Corporis quas quod obcaecati ad dolore neque vel consectetur,
-              exercitationem, officia optio, natus error unde repellendus atque.
-              Placeat vel corrupti suscipit sint ratione sequi. Minima illum hic
-              blanditiis pariatur dolores, impedit omnis qui repellendus
-              exercitationem? Assumenda, voluptate ex fugit nam voluptatem ab
-              eius fugiat qui itaque beatae delectus quos eaque, necessitatibus
-              iure, voluptas vitae distinctio dolorum fuga ad mollitia.
-              Similique minus esse vel mollitia, excepturi nulla sapiente
-              explicabo omnis voluptatem deleniti maiores id, numquam ut. Ullam
-              harum laborum officiis tenetur enim sapiente? Nobis possimus
-              explicabo, maxime, perspiciatis, eius debitis magnam consequuntur
-              omnis eos non necessitatibus molestiae delectus hic ullam ducimus.
-              Id sapiente cupiditate sed adipisci voluptate sequi totam alias
-              neque.
+              After I was finished, I submitted my work to the community, where other members put all our letters and characters into one font file. The font team shared the file with the community that we can now use in our other projects. I am delighted with the result and so glad I could create this!
             </p>
           </div>
         </div>
@@ -124,14 +74,15 @@
           <div id="titleC"><h2>Other Art Projects</h2></div>
           <div id="contain1"><a href="projectPageA_2.html"></a></div>
           <div id="pic1">
-            <img src="img/Let's_Talk.gif" alt="alt text" />
+            <img src="img/ProjectsPortfolioHungrySociety_4.jpg"
+            alt="article banner for Cuisine Noir" />
           </div>
           <div id="info1">
             <h2>Hungry Society - Article Banners</h2>
-            <p>This is a little blurb about the project</p>
-            <h4><span id="bold">Languages:</span> HTML, CSS, Javascript</h4>
-            <h4><span id="bold">Date:</span> xx/xx/xxxx</h4>
-        </div>
+            <p>Article banners created for a magazine article</p>
+            <h4><span class="bold">Programs:</span> Photoshop</h4>
+            <h4><span class="bold">Date:</span> June 2020</h4>
+          </div>
       </section>
     </body>
   </div>
