--- a/projectPageA_2.html
+++ b/projectPageA_2.html
@@ -33,90 +33,27 @@
           <a id="backLink" href="projectPage_Art.html">Back to Projects</a>
           <div id="title"><h2>Hungry Society - Article Banners</h2></div>
           <div id="imgc1">
-            <img src="img/draftWebsite1.png" alt="website image" />
+            <img src="img/Korsha_1_1Artboard 1.jpg" alt="website image" />
           </div>
           <div id="parac1">
             <p>
-              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Itaque
-              unde eos eius quas dicta vero architecto molestiae maxime quae,
-              accusantium aliquid cum cumque ipsa dolorem asperiores aliquam
-              consequatur aspernatur reiciendis incidunt exercitationem
-              nesciunt! Sunt, officiis. Alias temporibus perspiciatis voluptatum
-              nemo neque vero quae minima voluptatibus excepturi quidem
-              accusantium odit non ullam sed, eaque dolorum illum numquam
-              deleniti, rem veniam amet asperiores cumque officia! Quaerat
-              placeat in optio ex laborum, a libero voluptatum necessitatibus
-              aliquam deserunt repellat at, distinctio amet tenetur non
-              architecto asperiores! Repellat suscipit hic, beatae ad, dolorem,
-              tenetur corrupti laudantium autem error quis voluptate illum!
-              Quibusdam, non quia adipisci veniam itaque assumenda provident ab
-              necessitatibus, magnam ratione officia nam minus fuga quos
-              deserunt rerum impedit debitis praesentium? Fugit sapiente
-              assumenda voluptas obcaecati placeat deserunt eos nihil inventore
-              alias minima, recusandae ipsa illum fuga quibusdam tenetur quia
-              labore tempora eligendi? Blanditiis iure iusto nisi dolorum,
-              voluptatum obcaecati similique nihil earum accusamus maiores iste
-              ullam quae molestiae omnis non assumenda maxime ipsam cum impedit
-              odit? Est cum quisquam voluptatem rerum minus incidunt repellat
-              accusamus facilis deserunt minima corrupti quo doloribus maiores
-              quaerat ullam architecto, corporis tempore nihil cupiditate neque
-              aspernatur? Eligendi unde quo veniam tempore adipisci harum amet
-              magni est quod accusamus autem voluptatem architecto cumque,
-              officiis expedita dolore molestiae debitis corrupti velit nemo
-              modi. Saepe voluptatum voluptatibus voluptates illum magnam,
-              necessitatibus iste recusandae quae deserunt quisquam, est
-              consequatur fuga, ipsa corporis omnis laudantium officia ex!
-              Impedit eligendi iure repudiandae perferendis, dolorem nihil
-              maiores cum blanditiis quasi est, laudantium nam minus quaerat
-              accusantium sint magnam delectus voluptates debitis asperiores
-              sapiente harum. Quidem aspernatur blanditiis nesciunt excepturi
-              deleniti atque sapiente officia dignissimos? Architecto eum
-              blanditiis ea quod. Ipsa iusto ducimus expedita corrupti non a,
-              totam ipsum labore! Exercitationem voluptatibus natus ipsum
-              ratione, labore similique consequatur expedita non ad officiis
-              tempore deleniti.
+              The client reached out to me to create some banner art for her article on The Hungry Society. It was an interview with the publisher of Cuisine Noir, the first magazine dedicated to highlighting black chefs and the black experience in food, wine, and travel culture. I made a total of 3 images, with an additional three revised for client’s approval. 
             </p>
           </div>
           <div id="parac1">
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi,
-              vitae nihil. Magni veritatis eius, incidunt facilis veniam sint
-              est iste suscipit commodi? Placeat asperiores natus, iure
-              voluptate nulla error assumenda laudantium eaque consequatur odit
-              temporibus officiis adipisci doloremque quo quia. Exercitationem
-              temporibus ipsum sequi nam placeat corrupti voluptatem ab iste
-              quia aut libero cum debitis est, porro aliquid voluptatum deserunt
-              dicta sapiente nihil? Consequatur officiis quasi atque molestias
-              quae reiciendis.
+              I wanted to achieve a feeling of celebration of all that the magazine has accomplished while also staying in theme for the magazine. I created a banner that took the chefs on some cover pages of the magazine from years prior but decided to do a collage instead so that the focus was on the magazine and not the chefs themselves. This is why I feature the title in the center. I kept the original font to help with brand recognizability. 
             </p>
           </div>
           <div id="imgc1">
-            <img src="img/draftWebsite1.png" alt="website image" />
+            <img src="img/ProjectsPortfolioHungrySociety_4.jpg" alt="website image" />
           </div>
           <div id="imgc1">
-            <img src="img/draftWebsite1.png" alt="website image" />
+            <img src="img/ProjectsPortfolioHungrySociety_5.jpg" alt="website image" />
           </div>
           <div id="parac1">
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              Aspernatur saepe excepturi incidunt aliquam tempore officiis rerum
-              optio eveniet corrupti iure tempora asperiores quisquam illum vel
-              alias aperiam eum ea, laudantium blanditiis animi explicabo?
-              Cumque eos molestiae, cupiditate dolorem delectus laborum?
-              Corporis quas quod obcaecati ad dolore neque vel consectetur,
-              exercitationem, officia optio, natus error unde repellendus atque.
-              Placeat vel corrupti suscipit sint ratione sequi. Minima illum hic
-              blanditiis pariatur dolores, impedit omnis qui repellendus
-              exercitationem? Assumenda, voluptate ex fugit nam voluptatem ab
-              eius fugiat qui itaque beatae delectus quos eaque, necessitatibus
-              iure, voluptas vitae distinctio dolorum fuga ad mollitia.
-              Similique minus esse vel mollitia, excepturi nulla sapiente
-              explicabo omnis voluptatem deleniti maiores id, numquam ut. Ullam
-              harum laborum officiis tenetur enim sapiente? Nobis possimus
-              explicabo, maxime, perspiciatis, eius debitis magnam consequuntur
-              omnis eos non necessitatibus molestiae delectus hic ullam ducimus.
-              Id sapiente cupiditate sed adipisci voluptate sequi totam alias
-              neque.
+              The client liked the original image but wanted to incorporate more of her brand colors (from the Hungry Society’s warm tones) into the image. She asked if I could add flowers to the original, so I did, but I went ahead and made 2 more images that incorporated the colors she wanted in, which is the one she ended up choosing.
             </p>
           </div>
         </div>
@@ -124,7 +61,7 @@
           <div id="titleC"><h2>Other Art Projects</h2></div>
           <div id="contain1"><a href="projectPageA_1.html"></a></div>
           <div id="pic1">
-            <img src="img/Let's_Talk.gif" alt="alt text" />
+            <img src="img/typehausCollab_ylissity_FINAL.png" alt="alt text" />
           </div>
           <div id="info1">
             <h2>Type Haus - Font Collab</h2>
