--- a/projectPage_Art.html
+++ b/projectPage_Art.html
@@ -36,23 +36,26 @@
           <div id="titleC"><h2>Art Projects</h2></div>
           <div id="contain1"><a href="projectPageA_1.html"></a></div>
           <div id="pic1">
-            <img src="img/Let's_Talk.gif" alt="alt text" />
+            <img src="img/typehausCollab_ylissity_FINAL.png" alt="alt text" />
           </div>
           <div id="info1">
             <h2>Type Haus - Font Collab</h2>
-            <p>This is a little blurb about the project</p>
-            <h4><span id="bold">Programs:</span> Photoshop, Illustrator</h4>
-            <h4><span id="bold">Date:</span> xx/xx/xxxx</h4>
+            <p>A fun Font Collaboration on the Type Haus Discord</p>
+            <h4><span class="bold">Programs:</span> Photoshop, Illustrator</h4>
+            <h4><span class="bold">Date:</span> August 2021</h4>
           </div>
           <div id="contain2"><a href="projectPageA_2.html"></a></div>
           <div id="pic2">
-            <img src="img/draftWebsite1.png" alt="alt text" />
+            <img
+              src="img/ProjectsPortfolioHungrySociety_4.jpg"
+              alt="article banner for Cuisine Noir"
+            />
           </div>
           <div id="info2">
             <h2>Hungry Society - Article Banners</h2>
-            <p>This is a little blurb about the project</p>
-            <h4><span id="bold">Programs:</span> Photoshop, Illustrator</h4>
-            <h4><span id="bold">Date:</span> xx/xx/xxxx</h4>
+            <p>Article banners created for a magazine article</p>
+            <h4><span class="bold">Programs:</span> Photoshop</h4>
+            <h4><span class="bold">Date:</span> June 2020</h4>
           </div>
         </div>
       </section>
